--- a/config/database.yml
+++ b/config/database.yml
@@ -2,22 +2,22 @@ default: &default
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  host: postgres
+  host: db
   user: postgres
 
 
 development:
   <<: *default
-  database: V2OneBitExchange_development
+  database: OneBitExchange_development
 
 
 test:
   <<: *default
-  database: V2OneBitExchange_test
+  database: OneBitExchange_test
 
 
 production:
   <<: *default
-  database: V2OneBitExchange_production
+  database: OneBitExchange_production
   username: OneBitExchange
   password: <%= ENV['EXCHANGE_DATABASE_PASSWORD'] %>
